WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94156
REGRESSION(
r125710
) - canvas-fallback-content tests asserting in Chromium
https://bugs.webkit.org/show_bug.cgi?id=94156
Summary
REGRESSION(r125710) - canvas-fallback-content tests asserting in Chromium
Adrienne Walker
Reported
2012-08-15 15:41:51 PDT
After
http://trac.webkit.org/changeset/125710
, the newly added accessibility/canvas-fallback-content.html and the already existing platform/chromium/virtual/gpu/fast/canvas/fallback-content.html started asserting in debug runs of layout tests. See:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=accessibility%2Fcanvas-fallback-content.html%2Cplatform%2Fchromium%2Fvirtual%2Fgpu%2Ffast%2Fcanvas%2Ffallback-content.html
--snip-- crash log for DumpRenderTree (pid 18579): STDOUT: <empty> STDERR: ASSERTION FAILED: !document()->childNeedsStyleRecalc() STDERR: third_party/WebKit/Source/WebCore/dom/Node.cpp(927) : virtual bool WebCore::Node::isFocusable() const --snip--
Attachments
Patch
(3.89 KB, patch)
2012-08-16 14:05 PDT
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.96 KB, patch)
2012-08-17 10:08 PDT
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2012-08-15 15:54:50 PDT
Committed
r125719
: <
http://trac.webkit.org/changeset/125719
>
Dominic Mazzoni
Comment 2
2012-08-15 15:56:20 PDT
Thanks - will look at this
Dominic Mazzoni
Comment 3
2012-08-16 14:05:55 PDT
Created
attachment 158894
[details]
Patch
chris fleizach
Comment 4
2012-08-17 09:02:28 PDT
Comment on
attachment 158894
[details]
Patch Looks ok
WebKit Review Bot
Comment 5
2012-08-17 09:09:10 PDT
Comment on
attachment 158894
[details]
Patch Rejecting
attachment 158894
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: unk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/dom/Node.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/chromium/TestExpectations Hunk #1 FAILED at 3506. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/TestExpectations.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Chris Flei..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/13529085
Dominic Mazzoni
Comment 6
2012-08-17 10:08:05 PDT
Created
attachment 159148
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-08-17 11:43:05 PDT
Comment on
attachment 159148
[details]
Patch for landing Clearing flags on attachment: 159148 Committed
r125920
: <
http://trac.webkit.org/changeset/125920
>
WebKit Review Bot
Comment 8
2012-08-17 11:43:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug