REGRESSION(r125710) - canvas-fallback-content tests asserting in Chromium https://bugs.webkit.org/show_bug.cgi?id=94156

Reviewed by Chris Fleizach.

Source/WebCore:

When determining if a Node is focusable, check the canvas subtree
case first before encountering assertions that assume that anything
focusable must have an associated renderer.

Fixes existing tests so they don't assert.

* dom/Node.cpp:
(WebCore::Node::isFocusable):

LayoutTests:

Fixes two canvas tests that were asserting.

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/112171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125920 268f45cc-cd09-0410-ab3c-d52691b4dbfc